syntax = "proto3";
package overlord;

import "device.proto";


service DeviceGateway {
    rpc discover_devices(DiscoverDevicesRequest) returns (Devices) {}
    rpc get_devices(GetDevicesRequest) returns (Devices) {}
}
